# Game-Heap

./: .gitignore  CMakeLists.txt  README.md  main.cpp
API/: HowLongToBeatAPI.cpp  HowLongToBeatAPI.h  SteamAPI.cpp  SteamAPI.h
BacklogOrganizer/: BacklogOrganizer.cpp  BacklogOrganizer.h  Game.cpp  Game.h  GameFinder.cpp  GameFinder.h  GameLibrary.cpp  GameLibrary.h  PriorityCalculator.cpp  PriorityCalculator.h
CLI/: CLI.h
Libs/: color.h
Memory/: DataManager.cpp  DataManager.h
Output/: Logger.cpp  Logger.h  Printer.cpp  Printer.h
Parsers/: APIParser.cpp  APIParser.h  JSONParser.cpp  JSONParser.h
